tests/NormalTests/paczka1/small_fuzzy/97802899.err
Error in line 11: 9ycIXs A27 1,3
Error in line 14: 9ycIXs S157 29,6
